Pause screen implemented

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
                 padding: 0;
                 background-color: #cacaca;
             }
-            canvas {
+            #gameContainer {
+                position: relative; 
+            }
+            #gameCanvas {
                 border: 2px solid black;
                 display: block;
                 margin: 0 auto;
@@ -21,10 +24,50 @@
                 font-size: 24px;
                 margin-top: 10px;
             }
+            #pauseMenu {
+                display: block;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                background: rgba(0, 0, 0, 0.8);
+                color: white;
+                padding: 20px;
+                border-radius: 10px;
+                text-align: center;
+            }
+            #startButton{
+                background: #418d3a;
+                border-radius: 999px;
+                box-shadow: #418d3a 0 10px 20px -10px;
+                box-sizing: border-box;
+                color: #FFFFFF;
+                cursor: pointer;
+                font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+                font-size: 16px;
+                font-weight: 700;
+                line-height: 24px;
+                opacity: 1;
+                outline: 0 solid transparent;
+                padding: 8px 18px;
+                user-select: none;
+                -webkit-user-select: none;
+                touch-action: manipulation;
+                width: fit-content;
+                word-break: break-word;
+                border: 0;
+            }
         </style>
     </head>
     <body>
-        <canvas id="gameCanvas" width="400" height="400"></canvas>
+        <div id="gameContainer">
+            <canvas id="gameCanvas" width="400" height="400"></canvas>
+            <div id= "pauseMenu">
+                <h1 id="title">Snake</h1>
+                <button id="startButton">Start</button>
+            </div>
+        </div>
+
         <div id="score">Score: 0</div>
         <script src="game.js"></script>
     <body>
