--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div id="gameOverMenu">
                 <h1 id="gameOverTitle">Game Over</h1>
-                <h3 id="gameOverScore">Score: 0</h3>
+                <h3 id="finalScore">Score: 0</h3>
                 <button id="restartButton">Restart</button>
         </div>
         <div id="score">Score: 0</div>
