--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <div id="gameOverMenu">
                 <h1 id="gameOverTitle">Game Over</h1>
                 <h3 id="finalScore">Score: 0</h3>
-                <button id="restartButton">Restart</button>
+                <div id="gameOverImageContainer">
+                    <img id="gameOverImage" src="butterdog.jpg" alt="Game Over">
+                    <button id="restartButton">Restart</button>
+                </div>
         </div>
         <div id="score">Score: 0</div>
         <script src="game.js"></script>
